# open_ptrack

./: LICENSE  README-ZED WITH OPT INSTALL ONLY FOLLOW THIS IF USING ZED.txt  README-ZED WITH OPT INSTALL ONLY FOLLOW THIS IF USING ZED.txt~  README.md
bayes/: CMakeLists.txt  license.txt  package.xml
bayes/include/: CIFlt.hpp  SIRFlt.hpp  UDFlt.hpp  allFilters.hpp  bayesException.hpp  bayesFlt.hpp  covFlt.hpp  infRtFlt.hpp  itrFlt.hpp  matSup.hpp  matSupSub.hpp  models.hpp  random.hpp  schemeFlt.hpp  uBLASmatrix.hpp  unsFlt.hpp
bayes/src/: CIFlt.cpp  SIRFlt.cpp  UDFlt.cpp  UdU.cpp  bayesFlt.cpp  bayesFltAlg.cpp  covFlt.cpp  infFlt.cpp  infRtFlt.cpp  itrFlt.cpp  matSup.cpp  unsFlt.cpp
detection/: CMakeLists.txt  nodelet_plugins.xml  package.xml
detection/apps/: ground_based_people_detector_node.cpp  ground_based_people_detector_node.cpp~  ground_based_people_detector_node_sr.cpp  ground_based_people_detector_node_zed.cpp~  haardispada_node.cpp  haardispada_node_sr.cpp  haardispada_nodelet.cpp  haardispada_nodelet.cpp~  multiple_objects_detection_node.cpp
detection/cfg/: GroundBasedPeopleDetector.cfg  HaarDispAdaDetector.cfg  multiple_objects_detection.cfg
detection/conf/: ground_.txt  ground_based_people_detector.yaml  ground_based_people_detector_kinect1.yaml  ground_based_people_detector_kinect2.yaml  ground_based_people_detector_sr.yaml  ground_based_people_detector_sr_multicamera.yaml  ground_based_people_detector_stereo_pg.yaml  ground_based_people_detector_zed.yaml  ground_based_people_detector_zed.yaml~  ground_zed_tracked_frame.txt  haar_disp_ada_detector.yaml  haar_disp_ada_detector_sr.yaml  haar_disp_ada_detector_stereo_pg.yaml  multiple_objects_detection.yaml
detection/data/: HaarDispAda.xml  HogSvmPCL_half.yaml
detection/launch/: camera_poses.txt  detection_node.launch  detection_node_kinect2_head.launch  detector_depth.launch  detector_depth.launch~  detector_depth_kinect2.launch  detector_depth_sr.launch  detector_depth_xyz.launch  detector_depth_zed.launch  detector_depth_zed.launch~  detector_kinect1.launch  detector_kinect2.launch  detector_serial.launch  detector_sr4500.launch  detector_stereo.launch  detector_stereo_pg.launch  detector_with_name.launch  detector_with_name_sr.launch  freenect.launch  ground_based_people_detector.launch  object_detector_kinect2.launch  openni.launch
detection/src/: conversions.cpp  detection.cpp  detection_source.cpp  haardispada.cpp  haardispada.cpp~
open_ptrack/: CMakeLists.txt  package.xml
opt_calibration/: CMakeLists.txt  README.md  package.xml
opt_calibration/apps/: calibration_initializer.cpp  calibration_initializer.py  calibration_initializer_master.py  calibration_initializer_server.py  calibration_initializer_slave.py  calibration_saver.cpp  detection_initializer.py  listener.py  network_assessment.cpp  opt_calibration_refinement.cpp  status_plot.py  stereo_publisher.cpp
opt_calibration/conf/: calibration_refinement.rviz  calibration_refinement.yaml  calibration_results.rviz  camera_network.yaml  camera_network.yaml.example  opt_calibration.rviz  pg_default.yaml  stereo_proc.yaml
opt_calibration/launch/: calibration_initializer.launch  calibration_initializer_client.launch  calibration_initializer_master.launch  calibration_initializer_server.launch  calibration_initializer_slave.launch  calibration_saver.launch  detection_initializer.launch  listener.launch  network_assessment.launch  opt_calibration_client.launch  opt_calibration_master.launch  opt_calibration_refinement.launch  opt_calibration_results.launch  opt_define_reference_frame.launch  save_camera_info.launch  save_camera_info_sr.launch  sensor_blackfly_stereo.launch  sensor_kinect2_head.launch  sensor_stereo_demo.launch  sr4500_calibration.launch  stereo.launch  stereo_pg.launch  stereo_processing.launch  stereo_processing_blackfly_stereo.launch
opt_calibration/scripts/: move_camera_info.sh  save_camera_info_no_serial.sh  save_camera_info_sr.sh
opt_calibration/src/: calibration_node.cpp  multicamera_calibration.cpp  opt_calibration.cpp  opt_calibration_node.cpp  opt_checkerboard_extraction.cpp  opt_define_reference_frame.cpp  ros_device.cpp  trajectory_registration.cpp
opt_gui/: CMakeLists.txt  acknowledge  package.xml
opt_gui/conf/: opt_gui.yaml
opt_gui/data/: readme
opt_gui/launch/: opt_gui.launch
opt_gui/resources/: Rois_listview_delegate.qml  Streaming_listview_delegate.qml  images.qrc  main_window.qml  qml.qrc
opt_gui/src/: main_application.cpp  opt_gui_main.cpp
opt_msgs/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml
opt_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  CalibrationStatus.msg  Detection.msg  DetectionArray.msg  HumanEntries.msg  HumanEntry.msg  IDArray.msg  Image2D_roi.msg  Image2D_roi.msg~  Image2D_roi_file.msg  OPTSensor.msg  OPTSensorSet.msg  ObjectName.msg  ObjectNameArray.msg  RoiRect.msg  Rois.msg  SensorSet.msg  Track.msg  Track3D.msg  Track3DArray.msg  TrackArray.msg  World3D_roi.msg  World3D_roi.msg~  World3D_roi_arra.msg~  World3D_roi_array.msg  image2D_roi_array.msg~
opt_msgs/src/: overlap.cpp
opt_msgs/srv/: OPTSensor.srv  OPTTransform.srv
opt_utils/: CMakeLists.txt  mainpage.dox  package.xml
opt_utils/apps/: cloud_refinement.cpp  heatmap_builder.cpp  roi_viewer.cpp  ros2udp_converter.cpp  ros2udp_converter_object.cpp  udp_listener.cpp
opt_utils/cfg/: HeatmapBuilder.cfg
opt_utils/conf/: heatmap.yaml  json_udp.yaml
opt_utils/launch/: cloud_refinement.launch  heatmap_builder.launch  multicamera_visualization.launch  roi_viewer.launch  ros2udp_converter.launch  single_camera_visualization.launch  udp_listener.launch  visualization.launch  visualization_kinect2.launch  visualization_sr.launch
opt_utils/src/: conversions.cpp  json.cpp  main.cpp  roi_viewer.cpp  udp_messaging.cpp
swissranger_camera/: CMakeLists.txt  mainpage.dox  package.xml  rosdep.yaml
swissranger_camera/apps/: main_image_publisher_sr.cpp  set_camera_info.py
swissranger_camera/cfg/: SR4500_calib.yaml  SwissRanger.cfg  SwissRanger.cfgc  (+1 more)
tracking/: CMakeLists.txt  package.xml
(+164 files in other folders)
