<?xml version="1.0"?>
<package>
  <name>detection</name>
  <version>0.0.0</version>
  <description>Module containing people detection algorithms.</description>

  <maintainer email="munaro@dei.unipd.it">Matteo Munaro</maintainer>

  <license>BSD</license>

  <author email="munaro@dei.unipd.it">Matteo Munaro</author> >

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>opt_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opt_utils</build_depend>  
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>roscpp</run_depend> 
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>opt_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>opt_utils</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!--cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" /-->
    <!--cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lhaar_disp_ada "/-->    
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
