<?xml version="1.0"?>
<package>
  <name>opt_calibration</name>
  <version>0.0.0</version>
  <description>Extrinsic camera calibration for Open PTrack multicamera tracking.</description>

  <maintainer email="munaro@dei.unipd.it">Matteo Munaro</maintainer>

  <license>BSD</license>

  <author email="munaro@dei.unipd.it">Matteo Munaro</author> >

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>opt_msgs</build_depend>
  <build_depend>calibration_common</build_depend>
  <build_depend>kinect</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>swissranger_camera</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>detection</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>opt_msgs</run_depend>
  <run_depend>calibration_common</run_depend>
  <run_depend>kinect</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>swissranger_camera</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>detection</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
