<?xml version="1.0"?>
<package>
  <name>opt_utils</name>
  <version>0.0.0</version>
  <description>Utility functions for Open PTrack</description>

  <maintainer email="munaro@dei.unipd.it">Matteo Munaro</maintainer>

  <license>BSD</license>

  <author email="munaro@dei.unipd.it">Matteo Munaro</author> >

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>opt_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend> 
  <run_depend>opt_msgs</run_depend> 
  <run_depend>image_transport</run_depend> 
  <run_depend>cv_bridge</run_depend> 
  <run_depend>message_runtime</run_depend> 

</package>
